--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.atguigu.gmall0213</groupId>
     <artifactId>gmall0213-parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>gmall0213-realtime</module>
+    </modules>
 
 
 </project>
