clickhouse写入 ++ 分摊金额思路

--- a/gmall0213-realtime/pom.xml
+++ b/gmall0213-realtime/pom.xml
@@ -89,11 +89,11 @@
             <version>4.5.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.codehaus.janino</groupId>
-            <artifactId>commons-compiler</artifactId>
-            <version>2.7.8</version>
-        </dependency>
+<!--        <dependency>-->
+        <!--            <groupId>org.codehaus.janino</groupId>-->
+        <!--            <artifactId>commons-compiler</artifactId>-->
+        <!--            <version>2.7.8</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.thoughtworks.paranamer</groupId>
@@ -106,6 +106,14 @@
             <artifactId>elasticsearch</artifactId>
             <version>2.4.6</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>ru.yandex.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+
 
 
     </dependencies>
