数据接口完成

--- a/gmall0213-publisher/src/main/resources/application.properties
+++ b/gmall0213-publisher/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8070
 
 spring.elasticsearch.jest.uris=http://hdp1:9200,http://hdp2:9200
+
+spring.datasource.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
+spring.datasource.url=jdbc:clickhouse://hdp1:8123/test0213
+
+mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
