--- a/gmall0213-publisher/pom.xml
+++ b/gmall0213-publisher/pom.xml
@@ -100,6 +100,11 @@
             <version>0.1.55</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
 
     </dependencies>
 
