--- a/gmall0213-publisher/src/main/resources/application.properties
+++ b/gmall0213-publisher/src/main/resources/application.properties
@@ -2,8 +2,14 @@ server.port=8070
 
 spring.elasticsearch.jest.uris=http://hdp1:9200,http://hdp2:9200
 
-spring.datasource.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
-spring.datasource.url=jdbc:clickhouse://hdp1:8123/test0213
+# spring.datasource.d1.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
+# spring.datasource.d1.url=jdbc:clickhouse://hdp1:8123/test0213
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://hdp1:3306/gmall0213_rs?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123123
+
 
 mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
