解决bug 1 维度数据的任务，读取偏移量时消费者组和主题反了  2 排除了部分无法从中心仓库的依赖

--- a/gmall0213-realtime/pom.xml
+++ b/gmall0213-realtime/pom.xml
@@ -62,6 +62,12 @@
             <groupId>org.apache.phoenix</groupId>
             <artifactId>phoenix-spark</artifactId>
             <version>5.0.0-HBase-2.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.el</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
