多数据源配置

--- a/gmall0213-publisher/src/main/resources/application.properties
+++ b/gmall0213-publisher/src/main/resources/application.properties
@@ -2,14 +2,16 @@ server.port=8070
 
 spring.elasticsearch.jest.uris=http://hdp1:9200,http://hdp2:9200
 
-# spring.datasource.d1.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
-# spring.datasource.d1.url=jdbc:clickhouse://hdp1:8123/test0213
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://hdp1:3306/gmall0213_rs?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123123
 
 
-mybatis.mapperLocations=classpath:mapper/*.xml
+spring.datasource.d1.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
+spring.datasource.d1.jdbc-url=jdbc:clickhouse://hdp1:8123/test0213
+
+spring.datasource.d2.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.d2.jdbc-url=jdbc:mysql://hdp1:3306/gmall0213_rs?characterEncoding=utf-8&useSSL=false
+spring.datasource.d2.username=root
+spring.datasource.d2.password=123123
+
+
+#mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
